foreign/StdLibTest.java randomly crashes on MacOS/AArch64

XMLWordPrintable

    • aarch64
    • os_x

      Intermittent SIGBUS with the stack trace below. Looks like it's related to W^X.

      Stack: [0x0000000171758000,0x000000017195b000], sp=0x0000000171957ef0, free space=2047k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.dylib+0x984f70] MarkActivationClosure::do_code_blob(CodeBlob*)+0x3c
      V [libjvm.dylib+0x9bfb60] JavaThread::nmethods_do(CodeBlobClosure*)+0xac
      V [libjvm.dylib+0x4669a8] HandshakeState::process_by_self(bool)+0x31c
      V [libjvm.dylib+0x891230] SafepointMechanism::process(JavaThread*, bool)+0xac
      V [libjvm.dylib+0x9f4df0] UpcallLinker::on_entry(UpcallStub::FrameData*)+0xe0
      v blob 0x000000010e1ca4a8
      C [libsystem_c.dylib+0x5c284] _isort+0x88
      C 0x176d80010e0ca444
      j java.lang.invoke.LambdaForm$MH+0x0000000800c82000.invoke(Ljava/lang/Object;JJJJJ)V+16 java.base@19-internal

            Assignee:
            Nick Gasson
            Reporter:
            Nick Gasson
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: