8284072: foreign/StdLibTest.java randomly crashes on MacOS/AArch64

Reviewed-by: jvernee, mcimadamore